[package]
name = "todoist-rest-api"
description = "A Todoist REST API wrapper for Rust"
version = "1.0.0"
edition = "2021"
authors = ["dkim19375"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dkim19375/todoist-rest-api-rs"
repository = "https://github.com/dkim19375/todoist-rest-api-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }#, optional = true }
chrono-tz = { version = "0.8.5", features = ["serde"] }#, optional = true }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[features]
#chrono = ["dep:chrono", "dep:chrono-tz"]